--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3337,6 +3337,13 @@
 		}
 
 		
+		@media screen and (max-width: 2000px) {
+
+			.banner {
+				padding: 18rem 3rem 16rem 3rem ;
+			}
+
+		}
 
 
 		@media screen and (max-width: 1280px) {
